kubernetes/cvapp-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cvapp-api
  namespace: app
  labels:
    app: cvapp-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cvapp-api
  template:
    metadata:
      labels:
        app: cvapp-api
    spec:
      containers:
        - name: cvapp-api
          image: michalziaja/cvapp-api:71
          ports:
            - name: cvapp-api-port
              containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: cvapp-api
  namespace: app
  labels:
    app: cvapp-api
spec:
  ports:
    - protocol: TCP
      port: 5000
      targetPort: cvapp-api-port
  selector:
    app: cvapp-api
  type: ClusterIP
