kubernetes/cvapp-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cvapp-db
  namespace: app
  labels:
    app: cvapp-db
spec:
  selector:
    matchLabels:
      app: cvapp-db
  replicas: 1
  template:
    metadata:
      labels:
        app: cvapp-db
    spec:
      containers:
        - name: cvapp-db
          image: mongo
          ports:
            - name: cvapp-db-port
              containerPort: 27017
          volumeMounts:
            - mountPath: /mongo/data  
              name: cvapp-data
      # nodeSelector:
      #   zone: eu-central-1a
      # volumes:
      #   - name: cvapp-data
      #     awsElasticBlockStore:
      #       volumeID: vol-01b435f1b893a7908
      #       fsType: ext4
      
      volumes:
        - name: cvapp-data
          persistentVolumeClaim:
            claimName: mongodb-pvc
      
      
---
apiVersion: v1
kind: Service
metadata:
  name: cvapp-db
  namespace: app
  labels:
    app: cvapp-db
spec:
  ports:
    - port: 27017
      targetPort: cvapp-db-port
      protocol: TCP
  selector:
    app: cvapp-db
  type: NodePort
