kubernetes/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cvapp-web
  namespace: app
  labels:
    app: cvapp-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cvapp-web
  template:
    metadata:
      labels:
        app: cvapp-web
    spec:
      containers:
        - name: cvapp-web
          image: michalziaja/cvapp-web:88
          ports:
            - name: cvapp-web-port
              containerPort: 80
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: cvapp-web-svc
  namespace: app
  labels:
    app: cvapp-web
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "alb"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: cvapp-web
  type: LoadBalancer
  #type: ClusterIP
