kubernetes/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cvapp-alb
  namespace: ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: app.cvapplication.xyz
      http: 
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cvapp-api-svc
                port:
                  number: 5000
          
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cvapp-web-svc
                port:
                  number: 80
