kubernetes/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: cvapp-ingress
  namespace: app
  annotations:
    #kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: app.cvapplication.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cvapp-web-svc
                port:
                  number: 8080
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: cvapp-api-svc
                port:
                  number: 5000
